components/1/component.css
/* 
================================================================================
COMPONENT STYLESHEET
================================================================================ */

body {
	font: 14px/1.4 tahoma, serif;
	background: #FFF;
}

section {
	width: 80%;
	margin: auto;
	overflow: auto;
	z-index: 0;
}

/* TOP NAV ======================================== */

header {
	overflow: auto;
}

header > section:nth-of-type(1) ul:nth-of-type(1) {
	margin-bottom: 20px;
	width: 40%;
}

header > section:nth-of-type(1) ul:nth-of-type(2) {
	margin-bottom: 20px;
	width: 60%;
	float: left;
}

header > section:nth-of-type(1) ul::before {
	background-color: #3b363a;
	position: absolute;
	content: "";
	top: 0;
	left: 0px;
	width: 100%;
	height: 46px;
	z-index: 0;
}

header > section:nth-of-type(1) ul:nth-of-type(1) li {
	float: left;
}

header > section:nth-of-type(1) ul li a {
	border-right: 1px solid #514c50;
	z-index: 1;
}

header > section:nth-of-type(1) ul:nth-of-type(1) li a {
	background-position: 50% 50%;
	background-repeat: no-repeat;
	display: block;
	position: relative;
	text-indent: -9999px;
	width: 46px;
	height: 46px;
}

header > section:nth-of-type(1) ul:nth-of-type(2) li a {
	color: #fff;
	text-align: right;
	display: inline-block;
}

header > section:nth-of-type(1) ul > li:first-child a {
	border-left: 1px solid #514c50;
}

header > section:nth-of-type(1) ul .twitter {
	background-image: url("images/twitter.jpg");
}

header > section:nth-of-type(1) ul .facebook {
	background-image: url("images/facebook.jpg");
}

header > section:nth-of-type(1) ul .google {
	background-image: url("images/google.jpg");
}

header > section:nth-of-type(1) ul .pinterest {
	background-image: url("images/pinterest.jpg");
}

header > section:nth-of-type(1) ul .instagram {
	background-image: url("images/instagram.jpg");
}

header > section:nth-of-type(1) ul .rss {
	background-image: url("images/rss.jpg");
}

header section:nth-of-type(1) ul:nth-of-type(1){
	float: left;
	width: 40%;
}

/* MAIN SECTION ======================================== */

header img {
	float: left;
	width: 272px;
}

header nav {
	overflow: auto;
	float: left;
	width: calc(100% - 312px);
	text-align: right;
}

header nav ul li {
	display: inline-block;
}

header nav ul li a {
	color: #3b363a;
	display: block;
	padding: 30px 20px;
}

header nav ul li a[href*="user"] {
	position: absolute;
	top: 0;
	right: 0;
	color: #FFF;
}

